# telepathy-doc

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  autogen.sh  configure.ac
docs/: Makefile.am  Makefile_web.am_fragment  Makefile_web.am_fragment~  generate-figures.make  rsync-dist.make  rsync-properties.make
docs/book/: .gitignore  Makefile.am  Makefile.am~  book.css  insert-examples.py  insert-links.py  insert_example_code.pl
docs/book/C/: .gitignore  accounts.xml  basics.xml  calls.xml  channel-dispatcher.xml  channel.xml  connection-manager.xml  connection.xml  contactinfo.xml  filetransfer.xml  introduction.xml  legal.xml  messaging.xml  services.xml  telepathy.xml  telepathy.xml~  tube-example.xml  tubes.xml
docs/book/de/: .xml2po.mo  de.po  telepathy.xml
docs/book/xslt/: .gitignore  db2html.xsl.in
docs/examples/: .gitignore  Makefile.am  Makefile.am_fragment  Makefile.am~
docs/examples/basics_dbus_glib/: main.c
docs/examples/basics_dbus_glib_methods/: main.c
docs/examples/basics_dbus_glib_properties/: main.c
docs/examples/basics_dbus_glib_signals/: main.c
docs/examples/basics_dbus_python/: example.py
docs/examples/basics_dbus_python/.deps/: main.Po
docs/examples/basics_dbus_python_methods/: Makefile.am  example.py
docs/examples/basics_dbus_python_properties/: example.py
docs/examples/basics_dbus_python_signals/: example.py
docs/examples/connect/: Makefile.am  main.c
docs/examples/contacts_list_all/: main.c
docs/examples/glib_blinkenlight_observer/: .gitignore  Makefile.am  channel.c  channel.h  main.c  observer.c  observer.h
docs/examples/glib_dbus_tube/: .gitignore  Makefile.am  accept-tube.c  offer-tube.c
docs/examples/glib_get_roster/: Makefile.am  example.c
docs/examples/glib_get_user_defined_groups/: example.c
docs/examples/glib_jabber_muc/: example.c
docs/examples/glib_list_protocols/: example.c
docs/examples/glib_mc5_connections/: Makefile.am  example.c
docs/examples/glib_mc5_dbus_tube_handler/: example-handler.c  example-handler.h  example.c
docs/examples/glib_mc5_ft_handler/: Makefile.am  example-handler.c  example-handler.h  example.c
docs/examples/glib_mc5_observer/: Makefile.am  example-observer.c  example-observer.h  example.c  example2.c
docs/examples/glib_mc5_presence_app/: .gitignore  Makefile.am  connections-monitor.c  connections-monitor.h  example.c
docs/examples/glib_mc5_request_call/: example.c
docs/examples/glib_salut_ft/: .gitignore  Makefile.am  example.c  gnio-receiver.c  gnio-sender.c  receiver.c  sender.c
docs/examples/glib_stream_tube/: accept-tube.c  offer-tube.c
docs/examples/glib_telepathy_properties/: example.c
docs/examples/glib_text_channel/: example.c
docs/examples/gtk_presence_app/: Makefile.am  example.c  presence-chooser.c  presence-chooser.h  presence-widget.c  presence-widget.h  presence-window.c  presence-window.h
docs/examples/list_all_protocols/: main.c
docs/examples/list_contacts/: Makefile  Makefile.in  example  main.c  main_half.c  main_working.c  temp.patch
docs/examples/list_contacts/.deps/: main.Po
docs/examples/mission_control_plugin/: Makefile.am  mcp-account-manager-example.c  mcp-account-manager-example.h  mission-control-plugin.c
docs/examples/pygtk_chat_client/: ChatWindow.py  Makefile.am  RosterWindow.py  example.py
docs/examples/python_get_parameters/: Makefile.am  example.py
docs/examples/python_iface_messaging/: example.py
docs/examples/python_irc_channel/: example.py
docs/examples/python_irc_roomlist/: example.py
docs/examples/python_mc5_clients/: Makefile.am  approver.py  handler.py  observer.py  observer2.py  tube-sender.py
docs/examples/python_mc5_observer/: observer.py
docs/examples/python_simple_presence/: example.py
docs/examples/send_message/: main.c
docs/examples/set_presence/: Makefile  Makefile.in  example  main.c  main.c~
docs/examples/set_presence/.deps/: main.Po
m4/: Makefile.am  telepathy_docs_check_perl.m4
